--- a/dashboard/projects.html
+++ b/dashboard/projects.html
@@ -160,15 +160,14 @@
           <br>
           <br>
           <div class="bd-example">
+            
             <blockquote class="blockquote">
-              <p>Built with <span data-feather="heart"></span></p>
-              <footer class="blockquote-footer">Tech Stack: <cite title="Source Title">React (Frontend), Hosted with GitHub Pages, Bootstrap v5 (Frontend UI), Testing and Continous Integration done with (something CI)</cite></footer>
+              <p>Built with  <span data-feather="heart"></span></p>
+              <footer class="blockquote-footer">Tech Stack: <cite>React, GitHub Pages, Bootstrap v5, Travis CI</cite></footer>
             </blockquote>
-
             <p>Connect with me on LinkedIn!<br>
               <a href="https://www.linkedin.com/in/chibuikem/"><img src="..\assets\brand\linkedin.png" height="75" width="75" style="margin-top: 10px;"></a>
             </p>
-
           </div>
         </main>
       </div>
