--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -102,31 +102,33 @@
             <h1 class="h2">Welcome to my online portfolio!</h1>  
           </div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
           <div>
-            <p>A bit about myself: Fell in love with code. </p>
+            <p>A bit about myself: </p>
             <ul>
-              <p>You can view my resume below.
-              <a class="nav-link" href="https://drive.google.com/file/d/1erJScR2901u1bGGrb6Bo9twtAtuL2MOh/view?usp=sharing" style="width: fit-content;">
-                <span data-feather="file-text"></span>
-                Resume
-              </a></p>
+              <li>Tech Enthusiast.</li>
             </ul>
             <ul>
-              <p>I love challenging myself with programming challenges and constantly improving my coding abilities during my free time! LeetCode warrior status incoming!
+              <li>Crypto Fanatic.</li>
+            </ul>
+            <ul>
+              <li>GameStop Shareholder.</li>
+            </ul>
+            <ul>
+              <li>I like to code and solve programming challenges. LeetCode warrior status incoming!
               <a class="nav-link" href="https://leetcode.com/chibuikem7/" style="width: fit-content;">
                 <span data-feather="code"></span>
                 LeetCode
-              </a></p>
+              </a></li>
             </ul>
             <ul>
-              <p>Sometimes I build things for fun. Check out some of my personal projects here!
+              <li>Sometimes I build things for fun. Check out some of my personal projects here!
               <a class="nav-link" href="..\dashboard\projects.html" style="width: fit-content;">
                 <span data-feather="layers"></span>
                 Projects
-              </a></p>
+              </a></li>
             </ul>
             <ul>
-              <p>Throughout my time working both professionally and personally I've had the opportunity to learn and use various tools. Below are some of the tools I have proficiency with building and breaking apps; 
-              </p>
+              <li style="margin-bottom: 5px;">Sometimes I have the opportunity to learn and use new tools. Below are some of the tools I have proficiency with building and breaking apps ;) 
+              </li>
               <div class="mx-auto" style="width: 100%;">
                 <img src="..\assets\brand\docker.png" height="75" width="75" alt="docker logo">
                 <img src="..\assets\brand\react.png" height="75" width="110" alt="react logo">
@@ -137,8 +139,14 @@
                 <img src="..\assets\brand\aws.png" height="75" width="75" alt="aws logo">
                 <img src="..\assets\brand\metasploit.png" height="75" width="75" style="margin-left: 10px;" alt="metasploit logo">
               </div>
-              <p style="margin-top: 10px;">Some more of my other hobbies and interests include; Music, Art, Dance, Finance, & Crypto! 
-              </p>
+              <li style="margin-top: 10px;">Some more of my other hobbies and interests include;
+                <ul>
+                  <li>Music</li>
+                  <li>Art</li>
+                  <li>Dance</li>
+                  <li>Finance</li>
+                </ul>
+              </li>
             </ul>
           </div>
           
@@ -146,7 +154,7 @@
             
             <blockquote class="blockquote">
               <p>Built with  <span data-feather="heart"></span></p>
-              <footer class="blockquote-footer">Tech Stack: <cite>React (Frontend), Hosted with GitHub Pages, Bootstrap v5 (Frontend UI), Testing and Continous Integration done with (something CI)</cite></footer>
+              <footer class="blockquote-footer">Tech Stack: <cite>React, GitHub Pages, Bootstrap v5, Travis CI</cite></footer>
             </blockquote>
             <p>Connect with me on LinkedIn!<br>
               <a href="https://www.linkedin.com/in/chibuikem/"><img src="..\assets\brand\linkedin.png" height="75" width="75" style="margin-top: 10px;"></a>
