--- a/public/dashboard/projects.html
+++ b/public/dashboard/projects.html
@@ -109,7 +109,7 @@
                   <div class="card">
                     <div class="row g-0">
                       <div class="col-md-4">
-                        <svg class="bd-placeholder-img" width="100%" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image</text></svg>
+                        <svg class="bd-placeholder-img" width="100%" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Image" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em"></text></svg>
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -154,21 +154,20 @@
           </div>
           <div>
             <div class="bd-example">
-              <svg class="bd-placeholder-img bd-placeholder-img-lg img-fluid" width="100%" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Responsive image" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Responsive image</text></svg>
+              <svg class="bd-placeholder-img bd-placeholder-img-lg img-fluid" width="100%" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Responsive image" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"/><text x="50%" y="50%" fill="#dee2e6" dy=".3em"></text></svg>
             </div>
           </div>
           <br>
           <br>
           <div class="bd-example">
+            
             <blockquote class="blockquote">
-              <p>Built with <span data-feather="heart"></span></p>
-              <footer class="blockquote-footer">Tech Stack: <cite title="Source Title">React (Frontend), Hosted with GitHub Pages, Bootstrap v5 (Frontend UI), Testing and Continous Integration done with (something CI)</cite></footer>
+              <p>Built with  <span data-feather="heart"></span></p>
+              <footer class="blockquote-footer">Tech Stack: <cite>React, GitHub Pages, Bootstrap v5, Travis CI</cite></footer>
             </blockquote>
-
             <p>Connect with me on LinkedIn!<br>
               <a href="https://www.linkedin.com/in/chibuikem/"><img src="..\assets\brand\linkedin.png" height="75" width="75" style="margin-top: 10px;"></a>
             </p>
-
           </div>
         </main>
       </div>
