--- a/dashboard/projects.html
+++ b/dashboard/projects.html
@@ -114,7 +114,7 @@
                       <div class="col-md-8">
                         <div class="card-body">
                           <h5 class="card-title">Big Web</h5>
-                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          <p class="card-text">Big Web is the culmination of my freelance work and experience into an enterprise-level technology solutions agency. Excited to share more soon!</p>
                           <div class="spinner-border text-danger" role="status">
                             <span class="visually-hidden">In Progress...</span>
                           </div>
@@ -133,7 +133,7 @@
                       <div class="col-md-8">
                         <div class="card-body">
                           <h5 class="card-title">Spltr</h5>
-                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                          <p class="card-text">Spltr is a creative and novel way to improve the customer's experience while eating out with multiple people.</p>
                             <div class="spinner-border text-danger" role="status">
                               <span class="visually-hidden">In Progress...</span>
                             </div>
