--- a/dashboard/projects.html
+++ b/dashboard/projects.html
@@ -148,19 +148,19 @@
 
           <div><br></div>
 
-          <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-            <h1 class="h2">Past Projects</h1>
-          </div>
+          
           <div>
+            <h1 class="h2">Past Projects</h1>
             <div class="table-responsive">
-              <table class="table table-borderless">
+              <table class="table table-borderless caption-top">
+                <caption>Listed below are some projects I have contributed to in some capacity or developed myself</caption>
                 <thead>
                   <tr>
                     <th scope="col">#</th>
                     <th scope="col">Name</th>
                     <th scope="col"></th>
-                    <th scope="col">Year</th>
-                    <th scope="col">Learn More</th>
+                    <th scope="col">Founded</th>
+                    <th scope="col">More</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -186,11 +186,6 @@
                     <td colspan="2">Mitchell Fuori</td>
                     <td>2020</td>
                     <td><a href="https://mitchellfuori.com/">Visit</a></td>
-                  </tr>
-                  <tr>
-                    <th scope="row">5</th>
-                    <td colspan="2">Wear Your Wave</td>
-                    <td>2020</td>
                   </tr>
                   <tr>
                     <th scope="row">6</th>
