--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -109,9 +109,6 @@
               <li>Crypto Fanatic.</li>
             </ul>
             <ul>
-              <li>GameStop Shareholder.</li>
-            </ul>
-            <ul>
               <li>I like to code and solve programming challenges. LeetCode warrior status incoming!
               <a class="nav-link" href="https://leetcode.com/chibuikem7/" style="width: fit-content;">
                 <span data-feather="code"></span>
@@ -143,7 +140,7 @@
                   <li>Music</li>
                   <li>Art</li>
                   <li>Dance</li>
-                  <li>Finance</li>
+                  <li>Finance (GameStop Shareholder)</li>
                 </ul>
               </li>
             </ul>
