--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -45,9 +45,25 @@
 
               <li class="nav-item">
                 <button class="btn btn-outline-light">
-                  <a class="nav-link active" aria-current="page" href="index.html#top">
+                  <a class="nav-link" aria-current="page" href="index.html">
                     <span data-feather="user-check"></span>
                     About Me
+                  </a>
+                </button>
+              </li>
+              <li class="nav-item">
+                <button class="btn btn-outline-light">
+                  <a class="nav-link active" href="..\dashboard\projects.html">
+                    <span data-feather="layers"></span>
+                    Projects
+                  </a>
+                </button>
+              </li>
+              <li class="nav-item">
+                <button class="btn btn-outline-light" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="This section is under development. Please refer to resume">
+                  <a class="nav-link" href="#">
+                    <span data-feather="briefcase"></span>
+                    Work Experience
                   </a>
                 </button>
               </li>
@@ -56,22 +72,6 @@
                   <a class="nav-link" href="https://drive.google.com/file/d/1erJScR2901u1bGGrb6Bo9twtAtuL2MOh/view?usp=sharing">
                     <span data-feather="file-text"></span>
                     Resume
-                  </a>
-                </button>
-              </li>
-              <li class="nav-item">
-                <button class="btn btn-outline-light" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="This section is under development. Please refer to resume">
-                  <a class="nav-link" href="index.html#top">
-                    <span data-feather="briefcase"></span>
-                    Work Experience
-                  </a>
-                </button>
-              </li>
-              <li class="nav-item">
-                <button class="btn btn-outline-light">
-                  <a class="nav-link" href="..\dashboard\projects.html">
-                    <span data-feather="layers"></span>
-                    Projects
                   </a>
                 </button>
               </li>
