--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -45,7 +45,7 @@
 
               <li class="nav-item">
                 <button class="btn btn-outline-light">
-                  <a class="nav-link" aria-current="page" href="index.html">
+                  <a class="nav-link active" aria-current="page" href="index.html">
                     <span data-feather="user-check"></span>
                     About Me
                   </a>
