--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -53,7 +53,7 @@
               </li>
               <li class="nav-item">
                 <button class="btn btn-outline-light">
-                  <a class="nav-link active" href="..\dashboard\projects.html">
+                  <a class="nav-link" href="..\dashboard\projects.html">
                     <span data-feather="layers"></span>
                     Projects
                   </a>
